--- a/pages/allies.html
+++ b/pages/allies.html
@@ -75,7 +75,7 @@
           </a>
         </div>
         <div class="Allies__img2">
-          <a class="Allies__link" href="/pages/USA.html">
+          <a class="Allies__link" href="/pages/usa.html">
             <img
               class="Allies_usa img-fluid rounded"
               src="/img/fullscreen usa.jpg"
@@ -84,7 +84,7 @@
           </a>
         </div>
         <div class="Allies__img3">
-          <a class="Allies__link" href="/pages/GBR.html">
+          <a class="Allies__link" href="/pages/gbr.html">
             <img
               class="Allies_gbr img-fluid rounded"
               src="/img/fullscreen gbr.jpg"
