--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -166,9 +166,8 @@
     <!--   F O O T E R-->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners, I just share them with you. -
-        Design by Juan Bravo
-        <strong> 2021</strong>
+        >Photo credits to their respective owners.
+        <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
     <!--                       S  C  R  I  P  T  S                              -->
