--- a/pages/france.html
+++ b/pages/france.html
@@ -175,7 +175,7 @@
     <!--                F O O T E R              -->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners, I just share them with you.
+        >Photo credits to their respective owners.
         <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
