--- a/pages/germany.html
+++ b/pages/germany.html
@@ -111,7 +111,7 @@
           alt="Destroyed German Sd.Kfz. 124 Wespe"
         />
         <h5 class="Germany__text">
-          estroyed German Sd.Kfz. 124 Wespe self-propelled gun carriage near
+          Destroyed German Sd.Kfz. 124 Wespe self-propelled gun carriage near
           Mortrée, Orne, Normandy, France, circa Jun-Jul 1944
         </h5>
         <hr class="hr" />
